work back color

--- a/site/templates/css/app.css
+++ b/site/templates/css/app.css
@@ -20540,7 +20540,7 @@ div.masthead-work-wrapper {
     background: #f7f7f7
 }
 .work-page-back {
-    background: #565561;
+    background: #f7f7f7;
     padding-top: 160px;
 }
 #work {
