--- a/site/templates/css/app.css
+++ b/site/templates/css/app.css
@@ -21406,7 +21406,7 @@ body.template-contact div.contact-form-wrapper form.contact button.submit {
 }
 
 .title-skrim {
-    display: block;
+    display: none;
     position: absolute;
     width: 300px;
     height: 300px;
