title skrim test 8

--- a/site/templates/css/app.css
+++ b/site/templates/css/app.css
@@ -21408,16 +21408,16 @@ body.template-contact div.contact-form-wrapper form.contact button.submit {
 .title-skrim {
     display: none;
     position: absolute;
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     float: left;
     background: rgba(0, 0, 0, 0.4);
     color: #FFFFFF;
     font-family: "Lato", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-    font-size: 2em;
+    font-size: 1.9em;
     font-weight: 300;
     line-height: 1.1em;
     text-align: center;
-    padding: 3.7em 1em;
+    padding: 4em 1em;
     text-shadow: 1px 1px 1px black;
 }
