--- a/site/templates/css/app.css
+++ b/site/templates/css/app.css
@@ -21411,13 +21411,13 @@ body.template-contact div.contact-form-wrapper form.contact button.submit {
     width: 100%;
     height: 100%;
     float: left;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.75);
     color: #FFFFFF;
     font-family: "Lato", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
     font-size: 1.9em;
     font-weight: 300;
     line-height: 1.1em;
     text-align: center;
-    padding: 4em 1em;
+    padding: 0 1em;
     text-shadow: 1px 1px 1px black;
 }
