--- a/site/templates/css/app.css
+++ b/site/templates/css/app.css
@@ -21418,6 +21418,6 @@ body.template-contact div.contact-form-wrapper form.contact button.submit {
     font-weight: 300;
     line-height: 1.1em;
     text-align: center;
-    padding: 0 1em;
+    padding: 4em 1em 0 1em;
     text-shadow: 1px 1px 1px black;
 }
