image touch test 6.5

--- a/site/templates/css/touch.css
+++ b/site/templates/css/touch.css
@@ -10,7 +10,10 @@
 
 #ec-touch,
 #invue-touch,
-#opd-touch {
+#opd-touch,
+#qiq-touch,
+#bc-touch,
+#hp-touch {
   background-size: 300px;
   background-repeat: no-repeat;
   display: none;
