image touch final 2

--- a/site/templates/css/touch.css
+++ b/site/templates/css/touch.css
@@ -12,8 +12,14 @@
 #invue-touch,
 #opd-touch,
 #qiq-touch,
+#hp-touch,
 #bc-touch,
-#hp-touch {
+#sb-touch,
+#thelife-touch,
+#taxfree-touch,
+#nes-touch,
+#cbb-touch,
+#knopf-touch {
   background-size: 300px;
   background-repeat: no-repeat;
   display: none;
