--- a/site/templates/css/touch.css
+++ b/site/templates/css/touch.css
@@ -24,8 +24,8 @@
   background-repeat: no-repeat;
   display: none;
   max-width: 300px;
-/*  width: 300px;
-*/}
+  width: 300px;
+}
 
 /*#hp-touch,
 #knopf-touch {
