--- a/site/templates/css/touch.css
+++ b/site/templates/css/touch.css
@@ -27,15 +27,15 @@
   width: 300px;
 }
 
-/*#hp-touch,
+#hp-touch,
 #knopf-touch {
-  background-size: 300px;
+  background-size: 100% 50%;
 }
-*/
+
 #ec-touch {
   background-image: url(../../../site/assets/ec-dark.jpg);
-/*  height: 300px;
-*/}
+  height: 300px;
+}
 
 #invue-touch {
   background-image: url(../../../site/assets/invue-dark.jpg);
@@ -59,7 +59,6 @@
 
 #hp-touch {
   background-image: url(../../../site/assets/hp-dark.jpg);
-  height: cover;
 }
 
 #sb-touch {
@@ -89,5 +88,4 @@
 
 #knopf-touch {
   background-image: url(../../../site/assets/knopf-dark.jpg);
-  height: 300px;
 }
