touch images sizing fix 6

--- a/site/templates/css/touch.css
+++ b/site/templates/css/touch.css
@@ -20,7 +20,7 @@
 #nes-touch,
 #cbb-touch,
 #knopf-touch {
-  background-size: cover;
+  background-size: 300px;
   background-repeat: no-repeat;
   display: none;
   max-width: 300px;
