--- a/site/templates/css/touch.css
+++ b/site/templates/css/touch.css
@@ -27,11 +27,6 @@
   width: 300px;
 }
 
-#hp-touch,
-#knopf-touch {
-  background-size: 300px 150px;
-}
-
 #ec-touch {
   background-image: url(../../../site/assets/ec-dark.jpg);
   height: 300px;
@@ -59,6 +54,7 @@
 
 #hp-touch {
   background-image: url(../../../site/assets/hp-dark.jpg);
+  height: 150px;
 }
 
 #sb-touch {
@@ -88,4 +84,5 @@
 
 #knopf-touch {
   background-image: url(../../../site/assets/knopf-dark.jpg);
+  height: 150px;
 }
