--- a/css/protected.css
+++ b/css/protected.css
@@ -57,24 +57,30 @@ h2.section-title {
 .project-image,
 .mobile-preview-container,
 .video-container {
-  margin: 30px 0 0 0; }
+  display: inline-block;
+  padding: 20px 0;
+  width: 100%;
+}
 
 .mobile-preview-container,
 .mobile-preview-container-2 {
-  background: #FFFFFF;
-  width: 100%;
-  float: left;
-  padding: 28px 0 0 0; }
+    background: #cccccc;
+    width: 100%;
+    display: inline-block;
+    padding: 40px 0;
+    margin-top: 20px;
+}
   .mobile-preview-container video,
   .mobile-preview-container-2 video {
-    float: left;
-    margin-right: 24px;
-    margin-bottom: 24px; }
+}
 
-.mobile-preview-container-2 {
-  margin-top: 30px; }
-  .mobile-preview-container-2 video {
-    border: 1px solid #d4d4d4; }
+
+.mobile-preview-container-2 video {
+/*    border-top: 100px solid #d4d4d4;
+    border-bottom: 100px solid #d4d4d4;
+    background: #d4d4d4;*/
+    width: 100%;
+  }
 
 .mobile-preview-container-full {
   background: #FFFFFF;
@@ -82,8 +88,8 @@ h2.section-title {
   float: left;
   margin: 20px 0; }
 
-.section-right {
-  height: 574px; }
+/*.section-right {
+  height: 574px; }*/
 
 .section-right-2 {
   height: 594px; }
