add product image, refine look

--- a/site/templates/css/app.css
+++ b/site/templates/css/app.css
@@ -21430,7 +21430,7 @@ body.template-contact div.contact-form-wrapper form.contact button.submit {
 
 
 /* Case Study Styles -------------------------------------------------------------------*/
-
+/*
 
 .CS-text {
     font-family: 'Martel', serif;
@@ -21497,4 +21497,4 @@ body.template-contact div.contact-form-wrapper form.contact button.submit {
     margin-bottom: 18px;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
-}
+}*/
