--- a/site/templates/css/casestudy.css
+++ b/site/templates/css/casestudy.css
@@ -22,6 +22,14 @@
     background: #FFF;
 }
 
+.design-block {
+    background: #515151;
+}
+
+.impact-block {
+    background: #fc3116;
+}
+
 .text-pod {
     max-width: 692px; 
     margin: auto;
@@ -30,6 +38,13 @@
 }
 
 .small-head {
+    font-size: 12px;
+    font-weight: 800;
+    margin-bottom: 16px;
+}
+
+.small-head-white {
+    color: #FFF;
     font-size: 12px;
     font-weight: 800;
     margin-bottom: 16px;
@@ -66,4 +81,15 @@
     margin-bottom: 18px;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
+}
+
+.medium-stat-white {
+    color: #FFF;
+    padding: 18px 0;
+    font-size: 26px;
+    font-weight: 300;
+    line-height: 1.2em;
+    margin-bottom: 18px;
+    border-top: 1px solid rgb(255,255,255,30%);
+    border-bottom: 1px solid rgb(255,255,255,30%);
 }
