--- a/site/templates/css/app.css
+++ b/site/templates/css/app.css
@@ -20347,9 +20347,11 @@ div.footer {
 }
 @media only screen {
     div.footer {
-/*        margin-top: 80px;
-*/        padding-top: 40px;
-        padding-bottom: 90px
+        padding-top: 40px;
+        padding-bottom: 90px;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
     }
 }
 @media only screen and (min-width: 40.063em) {
