--- a/site/templates/css/app.css
+++ b/site/templates/css/app.css
@@ -20346,7 +20346,7 @@ div.footer {
     color: #fff
     padding-top: 40px;
     padding-bottom: 90px;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
@@ -20354,7 +20354,7 @@ div.footer {
     div.footer {
         padding-top: 40px;
         padding-bottom: 90px;
-        position: absolute;
+        position: relative;
         bottom: 0;
         width: 100%;
     }
